--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,5 +56,5 @@ jobs:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
           CI: true
         run: |
-          render deploys create ${{ secrets.RENDER_SERVICE_ID }} --image ${{ secrets.DOCKER_IMAGE }} --output json --confirm
+          render deploys create ${{ secrets.RENDER_SERVICE_ID }} --image ${{ secrets.DOCKER_IMAGE }}:$IMAGE_TAG --output json --confirm
 
